# src/routes/mod.rs
@@ -1,6 +1,6 @@
 use warp::{Filter, Rejection, Reply};
 
-use crate::db::Db;
+use db::Db;
 
 mod auth;
 mod class;
@@ -8,6 +8,8 @@ mod classroom;
 mod globals;
 mod manage;
 mod profile;
+mod teacher;
+mod student;
 
 pub use globals::{ErrorCode, FailureResponse};
 
@@ -17,4 +19,6 @@ pub fn routes(db: &Db) -> impl Filter<Extract = impl Reply, Error = Rejection> +
         .or(profile::routes(db))
         .or(classroom::routes(db))
         .or(class::routes(db))
+        .or(teacher::routes(db))
+        .or(student::routes(db))
 }
